<resources>
    <string name="app_name">AP Inventory</string>
    <string name="app_title">AP Inventory</string>

    <string name="action_settings">Settings</string>
    <string name="action_view_assets">View Assets</string>
    <string name="action_view_scanned_assets">View Scanned Assets</string>
    <string name="action_view_locations">View Locations</string>
    <string name="action_delete_assets">Delete Assets</string>
    <string name="action_delete_locations">Delete Locations</string>
    <string name="action_exit">Exit</string>
    <string name="action_return">Return</string>
    <string name="action_search">Search</string>

    <string name="search_hint">Search AssetNum</string>

    <!-- Splash Activity -->
    <string name="splash_company_name">Agency</string>
    <string name="splash_copyright">copyright 2019</string>

    <!-- Settings Activity -->
    <string name="pref_subtitle">Preferences</string>

    <!-- Main Activity -->
    <string name="main_subtitle">Home</string>
    <string name="mainAIN">AIN:</string>
    <string name="mainCIC">CIC:</string>
    <string name="mainCMR">CMR:</string>
    <string name="mainLocation">Location:</string>
    <string name="mainAssets">Num Assets:</string>
    <string name="mainScannedAssets">Scanned Assets:</string>
    <string name="mainLocations">Num Locations:</string>
    <string name="mainImportTimestamp">Imported At:</string>
    <string name="main_scan_text">Scan</string>
    <string name="main_import_text">Import</string>
    <string name="main_export_text">Export</string>
    <string name="main_import_complete_msg">Import Complete</string>
    <string name="main_delete_complete_msg">Delete Complete</string>
    <string name="main_alert_verify_delete">Delete All Data?</string>
    <string name="main_alert_verify_delete_assets">Delete All Assets?</string>
    <string name="main_alert_verify_delete_locations">Delete All Locations?</string>
    <string name="main_alert_delete_msg">Are you sure?</string>
    <string name="main_alert_export_title">Export Counts</string>
    <string name="main_alert_export_msg">Nbr modified assets: %1$d\nNbr exported assets: %2$d</string>

    <!-- Scan Activity -->
    <string name="view_scan_subtitle">Scan</string>
    <string name="scan_asset_bcn_label">BCN:</string>
    <string name="scan_asset_num_label">Num:</string>
    <string name="scan_asset_desc_label">Desc:</string>
    <string name="scan_asset_cic_label">CIC:</string>
    <string name="scan_asset_cmr_label">CMR:</string>
    <string name="scan_asset_button_label">Go!</string>

    <!-- View Assets Activity -->
    <string name="view_assets_subtitle">All Assets (%1$s)</string>
    <string name="view_scanned_assets_subtitle">Scanned Assets (%1$s)</string>
    <string name="view_assets_label">Desc:</string>
    <string name="asset_cic_label">CIC:</string>
    <string name="asset_cmr_label">CMR:</string>
    <string name="asset_last_inv_date_label">LastInvDate:</string>
    <string name="timestamp_str">%1$d/%2$d/%3$d %4$d:%5$02d.%6$02d</string>
    <string name="timestamp_str2">%1$d/%2$d/%3$d\n%4$d:%5$02d.%6$02d</string>

    <!-- View Locations Activity -->
    <string name="view_locations_subtitle">All Locations (%1$s)</string>
    <string name="view_locations_set">Location set to %1$s</string>
    <string name="view_locations_label">Desc:</string>

    <!-- Asset Dialog -->
    <string name="asset_dlg_title">Asset</string>
    <string name="asset_dlg_asset_num">AssetNum:</string>
    <string name="asset_dlg_asset_desc">Description:</string>
    <string name="asset_dlg_asset_cic">CIC:</string>
    <string name="asset_dlg_asset_cmr">CMR:</string>
    <string name="asset_dlg_last_inv_date">LastInvDate:</string>
    <string name="asset_dlg_go_button">Ok</string>
    <string name="asset_dlg_set_location_button">Set Location</string>

    <!-- Location Dialog -->
    <string name="location_dlg_title">Location</string>
    <string name="location_dlg_location_num">Num:</string>
    <string name="location_dlg_location_desc">Desc:</string>

    <!-- Info Dialog -->
    <string name="info_dlg_title">User Info</string>
    <string name="info_dlg_ain">AIN:</string>
    <string name="info_dlg_cic">CIC:</string>
    <string name="info_dlg_cmr">CMR:</string>
    <string name="info_dlg_go_button">Go!</string>

    <string name="import_progress_msg">Loading %1$s (%2$d)</string>
    <string name="export_progress_msg">Exporting Assets (%1$d)</string>

    <string name="default_ain"></string>
    <string name="default_cic"></string>
    <string name="default_cmr"></string>
    <string name="default_location"></string>
    <string name="default_author">David H. Mobley</string>

    <string name="pref_first_time_key">FirstTime</string>

    <string name="pref_category_info_title">User Info</string>
    <string name="pref_category_info_summary">Set User Information</string>
    <string name="pref_category_about_title">About</string>
    <string name="pref_category_about_summary">About Information</string>

    <string name="pref_category_version">Version</string>
    <string name="pref_version_title">Version</string>
    <!-- string name="pref_version_summary">Version of App</string -->
    <string name="pref_version_key">Version</string>
    <string name="pref_version_str">Version:</string>

    <string name="pref_category_author">Author</string>
    <string name="pref_author_title">Author</string>
    <!-- string name="pref_author_summary">Author of App</string -->
    <string name="pref_author_key">AppAuthor</string>
    <string name="pref_author_str">Author:</string>

    <string name="pref_category_ain">Agency Identification Number</string>
    <string name="pref_ain_key">AIN</string>
    <string name="pref_ain_title">Your AIN</string>
    <string name="pref_ain_summary">AIN Number</string>

    <string name="pref_category_cic">Customer Identity Code</string>
    <string name="pref_cic_key">CIC</string>
    <string name="pref_cic_title">Your CIC</string>
    <string name="pref_cic_summary">CIC Number</string>

    <string name="pref_category_cmr">Consolidated Memo of Receipt</string>
    <string name="pref_cmr_key">CMR</string>
    <string name="pref_cmr_title">Your CMR</string>
    <string name="pref_cmr_summary">CMR String</string>

    <string name="pref_import_timestamp_key">ImportTimestamp</string>
    <string name="pref_location_key">Location</string>

</resources>
