<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mobley.apinventory.activities.MainActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_view_assets"
        android:orderInCategory="110"
        android:title="@string/action_view_assets"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_view_scanned_assets"
        android:orderInCategory="111"
        android:title="@string/action_view_scanned_assets"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_view_locations"
        android:orderInCategory="112"
        android:title="@string/action_view_locations"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_assets"
        android:orderInCategory="200"
        android:title="@string/action_delete_assets"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_locations"
        android:orderInCategory="201"
        android:title="@string/action_delete_locations"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_exit"
        android:orderInCategory="999"
        android:title="@string/action_exit"
        app:showAsAction="never" />

</menu>
