<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.ScanActivity"
    tools:showIn="@layout/activity_scan">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/scanAssetBCNTV"
                style="@style/My_Bold_TextAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|right"
                android:text="@string/scan_asset_bcn_label"/>

            <EditText
                android:id="@+id/scanAssetBCNET"
                style="@style/My_Normal_TextAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:inputType="text"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/My_Bold_TextAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|right"
                android:text="@string/scan_asset_num_label"/>

            <TextView
                android:id="@+id/scanAssetNumTV"
                style="@style/My_Normal_TextAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/My_Bold_TextAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|right"
                android:text="@string/scan_asset_desc_label"/>

            <TextView
                android:id="@+id/scanAssetDescTV2"
                style="@style/My_Normal_TextAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/My_Bold_TextAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|right"
                android:text="@string/scan_asset_cic_label"/>

            <TextView
                android:id="@+id/scanAssetCicTV2"
                style="@style/My_Normal_TextAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/My_Bold_TextAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|right"
                android:text="@string/scan_asset_cmr_label"/>

            <TextView
                android:id="@+id/scanAssetCmrTV2"
                style="@style/My_Normal_TextAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/scanAssetButton"
                style="@style/My_Bold_TextAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_span="2"
                android:layout_weight="1"
                android:text="@string/scan_asset_button_label"
                android:textColor="@android:color/white"/>

        </TableRow>

    </TableLayout>
</android.support.constraint.ConstraintLayout>