<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/infoDlgAinTV"
                style="@style/My_Bold_TextAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|right"
                android:text="@string/info_dlg_ain"/>

            <EditText
                android:id="@+id/infoDlgAinET"
                style="@style/My_Normal_TextAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:inputType="number"
                android:imeOptions="actionNext"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/infoDlgCicTV"
                style="@style/My_Bold_TextAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|right"
                android:text="@string/info_dlg_cic"/>

            <EditText
                android:id="@+id/infoDlgCicET"
                style="@style/My_Normal_TextAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:inputType="number"
                android:imeOptions="actionNext"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/infoDlgCmrTV"
                style="@style/My_Bold_TextAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|right"
                android:text="@string/info_dlg_cmr"/>

            <EditText
                android:id="@+id/infoDlgCmrET"
                style="@style/My_Normal_TextAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:inputType="text"
                android:imeOptions="actionDone"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/infoDlgGoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_span="2"
                android:text="@string/info_dlg_go_button" />

        </TableRow>

    </TableLayout>
</RelativeLayout>